[gd_scene load_steps=5 format=4 uid="uid://djfbqjmlhgsdr"]

[ext_resource type="Texture2D" uid="uid://difyigtbly6i0" path="res://assets/tileset.png" id="1_fdak3"]
[ext_resource type="Script" uid="uid://b1n3qgfo1y5rk" path="res://scripts/game.gd" id="1_ifh15"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fqmia"]
texture = ExtResource("1_fdak3")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)

[sub_resource type="TileSet" id="TileSet_pv3u3"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fqmia")

[node name="Game" type="Node"]
script = ExtResource("1_ifh15")

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cj38ka7yb8y1f")
spawn_path = NodePath("..")

[node name="PowerUpSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://eebn50b4xptn")
spawn_path = NodePath("..")

[node name="Level" type="TileMapLayer" parent="."]
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAADAAEAAAAAAAAAAAADAAAAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAFAAEAAAAAAAAAAAAHAAEAAAAAAAAAAAAIAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD4/wEAAAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAD4/wAAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAP//AAAAAAAAAAAJAP//AAAAAAAAAAAJAP7/AAAAAAAAAAAKAP7/AAAAAAAAAAAKAP3/AAAAAAAAAAALAP3/AAAAAAAAAAALAPz/AAAAAAAAAAAMAPz/AAAAAAAAAAANAPz/AAAAAAAAAAANAPv/AAAAAAAAAAAOAPv/AAAAAAAAAAAOAPr/AAAAAAAAAAANAPr/AAAAAAAAAAAMAPv/AAAAAAAAAAD3/wAAAAAAAAAAAAD3////AAAAAAAAAAD2//7/AAAAAAAAAAD1//7/AAAAAAAAAAD0//7/AAAAAAAAAAD0//3/AAAAAAAAAADz//3/AAAAAAAAAADz//7/AAAAAAAAAADu/wMAAAAAAAAAAADv/wMAAAAAAAAAAADv/wQAAAAAAAAAAADw/wQAAAAAAAAAAADx/wQAAAAAAAAAAADx/wUAAAAAAAAAAADy/wUAAAAAAAAAAADz/wUAAAAAAAAAAAD0/wUAAAAAAAAAAAD1/wUAAAAAAAAAAAD2/wUAAAAAAAAAAAD3/wUAAAAAAAAAAAD4/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD+/wUAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAQAAAABAAAAAAADAAQAAAABAAAAAAACAAQAAAABAAAAAAABAAQAAAABAAAAAAACAAMAAAABAAAAAAAFAAQAAAABAAAAAAAGAAQAAAABAAAAAAAHAAQAAAABAAAAAAAIAAQAAAABAAAAAAAIAAMAAAABAAAAAAAJAAMAAAABAAAAAAAKAAMAAAABAAAAAAALAAMAAAABAAAAAAAMAAIAAAABAAAAAAANAAIAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAABAAAAAAAPAAAAAAABAAAAAAAQAAAAAAABAAAAAAAQAP//AAABAAAAAAARAP//AAABAAAAAAASAP//AAABAAAAAAASAP7/AAABAAAAAAATAP7/AAABAAAAAAATAP3/AAABAAAAAAAUAP3/AAABAAAAAAAUAPz/AAABAAAAAAAUAPv/AAABAAAAAAAUAPr/AAABAAAAAAARAPr/AAABAAAAAAD4//v/AAABAAAAAAD4//r/AAABAAAAAAD4//n/AAABAAAAAAD5//n/AAABAAAAAAD6//n/AAABAAAAAAD7//n/AAABAAAAAAD8//n/AAABAAAAAAD9//n/AAABAAAAAAD+//n/AAABAAAAAAD///n/AAABAAAAAAAAAPn/AAABAAAAAAABAPn/AAABAAAAAAACAPn/AAABAAAAAAADAPn/AAABAAAAAAAEAPn/AAABAAAAAAAFAPn/AAABAAAAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAD6//3/AAABAAAAAAD7//3/AAABAAAAAAD8//3/AAABAAAAAAD9//3/AAABAAAAAAD+//3/AAABAAAAAAD///3/AAABAAAAAAAAAP3/AAABAAAAAAABAP3/AAABAAAAAAACAP3/AAABAAAAAAADAP3/AAABAAAAAAD+//b/AAABAAAAAAD+//X/AAABAAAAAAD+//T/AAABAAAAAAD+//P/AAABAAAAAAD+//L/AAABAAAAAAD7//b/AAABAAAAAAD9//T/AAABAAAAAAABAPb/AAABAAAAAAD///T/AAABAAAAAADs////AAABAAAAAADt////AAABAAAAAADu////AAABAAAAAADv////AAABAAAAAADq//r/AAABAAAAAADr//r/AAABAAAAAADp//r/AAABAAAAAADn//f/AAABAAAAAADo//f/AAABAAAAAADt//z/AAAAAAAAAADm//f/AAAAAAAAAADm//j/AAAAAAAAAADm//n/AAAAAAAAAADm//r/AAAAAAAAAADn//r/AAAAAAAAAADo//r/AAAAAAAAAADr//v/AAAAAAAAAADr//z/AAAAAAAAAADr//3/AAAAAAAAAADr//7/AAAAAAAAAADr////AAAAAAAAAADt/wAAAAAAAAAAAADt/wEAAAAAAAAAAADt/wIAAAAAAAAAAADt/wMAAAAAAAAAAADm//b/AAAAAAAAAADm//X/AAAAAAAAAADm//T/AAAAAAAAAADm//P/AAAAAAAAAADm//L/AAAAAAAAAADm//H/AAAAAAAAAADm//D/AAAAAAAAAAAUAPn/AAAAAAAAAAAUAPj/AAAAAAAAAAAUAPf/AAAAAAAAAAAUAPb/AAAAAAAAAAAUAPX/AAAAAAAAAAAUAPT/AAAAAAAAAAAUAPP/AAAAAAAAAAAUAPL/AAAAAAAAAAAUAPH/AAAAAAAAAAAUAPD/AAAAAAAAAAAUAO//AAAAAAAAAAAUAO3/AAAAAAAAAAAUAO7/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_pv3u3")

[node name="PlayerSpawnPoints" type="Node2D" parent="Level"]
visible = false

[node name="Spawn1" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(-137, 16)

[node name="Spawn2" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(-192, -80)

[node name="Spawn3" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(-5, -101)

[node name="Spawn4" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(15, -31)

[node name="Spawn5" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(-28, -7)

[node name="Spawn6" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(52, 24)

[node name="Spawn7" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(137, -15)

[node name="Spawn8" type="Marker2D" parent="Level/PlayerSpawnPoints"]
position = Vector2(140, -54)

[node name="PowerUpSpawnPoints" type="Node2D" parent="Level"]

[node name="Spawn1" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(-96, 14)

[node name="Spawn2" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(-148, -38)

[node name="Spawn3" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(-13, -119)

[node name="Spawn4" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(-7, -33)

[node name="Spawn5" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(70, -78)

[node name="Spawn6" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(21, 19)

[node name="Spawn7" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(128, -42)

[node name="Spawn8" type="Marker2D" parent="Level/PowerUpSpawnPoints"]
position = Vector2(-162, -94)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-25, -59)
zoom = Vector2(4, 4)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -46.5
offset_right = 52.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Cube Shooter"

[node name="Host" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Host
"

[node name="Join" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
